css/media-part-1.css
@media (max-width: 1440px) {
    .icon_plus_scroll_container {
        padding-right: 58px;

    }
}

@media (min-width: 1441px) {
    .icon_plus_scroll_container {
        padding-right: 0;
        position: relative;
        top: 0;
    }

    .border-left,
    .img-line-right {
        position: relative;
        width: 60px;
    }

    .img-line-right::before {
        content: '';
        position: absolute;
        right: auto;
        top: 0;
        width: 100vw;
        height: 4px;
        background-color: #70e61c;
    }

    .skills-title-line {
        position: relative;
    }

    .skills-title-line::before {
        content: '';
        position: absolute;
        left: auto;
        top: 0;
        width: 100vw;
        height: 4px;
        background-color: #9747ff;
    }

    .portfolio-title-line {
        position: relative;
    }

    .portfolio-title-line::before {
        content: '';
        position: absolute;
        right: auto;
        top: 0;
        width: 100vw;
        height: 4px;
        background-color: #9747ff;
    }

    .portfolio-title-line-left {
        position: relative;
    }

    .contact-title-line::before,
    .border-left::before,
    .portfolio-title-line-left::before {
        content: '';
        position: absolute;
        right: 0;
        top: 0;
        width: 100vw;
        height: 4px;
        background-color: #9747ff;
    }

    .contact-title-line {
        position: relative;
    }

    .review-avatar-line {
        position: relative;
    }

    .review-avatar-line::before {
        content: '';
        position: absolute;
        left: auto;
        top: 0;
        width: 100vw;
        height: 3px;
        background-color: #9747ff;
    }
}

@media (max-width: 1360px) {
    :root {
        --h2-size: 60px;
    }


    .Name {
        font-size: 64px;
        height: unset;
    }

    .job-title {
        font-size: 34px;
    }

    .vertical-headline {
        font-size: 48px;
        padding-top: 10px;
    }

    .horizontal-headline {
        gap: 0px;
    }

    .scrollDown-vertical {
        font-size: 18px;
    }

    .about-me-decorative {
        width: 300px;
        height: 340px;
    }

    .img-line-right {
        width: 200px;
    }

    .section-title {
        font-size: var(--h2-size);
    }

    .border-bottom-line::after {
        top: -462px !important;
    }

    .profile-background {
        width: 94%;
    }
}

@media (max-width: 1252px) {
    .skills-description-wrap {
        padding: 0 10px !important;
    }


}

@media (max-width: 1252px) {
    .floating-skill-icons {
        position: absolute;
        left: 67%;
        top: -26%;
        width: 0;
        height: 0;
        pointer-events: none;
        z-index: 2;
    }

    .introduction {
        position: relative;
        display: flex;
        align-items: start;
        justify-content: end;
        width: 100%;
        left: 72px;
        bottom: 64px;
    }
}

@media (max-width: 1200px) {
    .reviewOfperson-container {
        grid-template-columns: 1fr;
        justify-items: center;
        padding: 0;
    }

    .reviewOfperson-container::after {
        right: 50%;
        top: 78%;
        transform: translate(50%, -50%);
    }

    .reviewOfperson-card {
        max-width: 900px;
        min-width: 270px;
        order: 1;
        width: 80%;
    }

    .reviewOfperson-avatar-wrap {
        justify-content: center;
    }

    .reviewOfperson-avatar-wrap::before {
        content: '';
        position: absolute;
        width: 100%;
        height: 100%;
        top: -26px;
        left: -29px;
        filter: blur(11px);
        border-radius: 50%;
        background: linear-gradient(180deg, #70e61c 0%, rgba(112, 230, 28, 0) 100%);
        z-index: -1;
        pointer-events: none;
    }

    .reviewOfperson-avatar-wrap::after {
        content: '';
        position: absolute;
        width: 100%;
        height: 100%;
        top: 6px;
        left: 55px;
        filter: blur(21px);
        border-radius: 50%;
        background: linear-gradient(180deg, #9646fe 0%, rgba(112, 230, 28, 0) 100%);
        z-index: -1;
        pointer-events: none;
    }

    .review-avatar-line {
        display: none;
    }
}

@media (max-width: 1180px) {
    .skills {
        justify-content: end;
    }

    .skills-content,
    .skills-description-wrap {
        display: contents;
    }

    .skills-headline-wrap {
        order: 1;
    }

    .skills-question {
        order: 4;
    }

    .skills-icons {
        order: 3;
        grid-template-columns: repeat(6, minmax(140px, 1fr));
        gap: 10px 0px;
    }

    .skills-description {
        order: 2;
    }

    .skills-subtext {
        order: 5;
    }

    .skills-contact-btn {
        order: 6;
        width: 20%;
    }

    .skills-grid {
        grid-template-columns: 1fr;
        padding-top: 0;
        width: 100%;
    }

    .skills-content {
        text-align: left;
    }

    .skills-headline-wrap {
        justify-content: right;
    }

    .skills-description,
    .skills-subtext,
    .skills-question {
        margin-left: 0;
        text-align: justify;
        margin-top: 0;
        padding-right: 10px;
    }
}

@media (max-width: 1084px) {
    :root {
        --h2-size: 44px;
    }


    .Name {
        font-size: 48px;
        line-height: 70px;
    }

    .job-title {
        font-size: 25px;
        line-height: 27px;
        font-weight: bold;
    }

    .vertical-headline {
        font-size: 40px;
        padding-top: 16px;
    }

    .horizontal-headline {
        gap: 0px;
    }

    .section-title {
        font-size: var(--h2-size);
    }

    .img-line-right {
        width: 80px;
    }

    .border-bottom-line::after {
        top: -446px !important;
    }
}

@media (max-width: 1024px) {
    .border-bottom-line::after {
        top: -450px !important;
    }

    .skills {
        justify-content: end;
    }

    .contact-form-container {
        flex-direction: column;
        align-items: center;
        padding: 0px 56px 0px;
    }

    .if_problem {
        width: 100%;
        max-width: 640px;
    }

    .contact_form {
        width: 100%;
        max-width: 640px;
    }

    .introduction {
        position: relative;
        display: flex;
        align-items: start;
        justify-content: flex-end;
        width: 100%;
        left: 100px;
        bottom: 50px;
        z-index: 1000;
    }

    .floating-skill-icons {
        position: absolute;
        left: 70%;
        top: 20%;
        width: 0;
        height: 0;
        pointer-events: none;
        z-index: 2;
    }

    .about {
        padding-top: 150px;
        margin-top: 285px;
        height: 72vh !important;
    }
}

@media (max-width: 912px) and (max-height: 1368px) {
    .icon_plus_scroll_container {
        top: 20px !important;
        position: relative;
    }

    .profile-img {
        left: 0 !important;
        top: -20px !important;
        width: 80% !important;
    }

    .floating-skill-icons {
        left: 70% !important;
        top: -200px !important;
    }

    .about {
        padding-top: 150px;
        margin-top: 100px;
        height: 100vh !important;
    }
    .border-bottom-line::after {
        top: -600px !important;
    }
    .introduction {
        top: -80px !important;
    }
}

@media (max-width: 1024px) and (max-height: 1366px) {
    .icon_plus_scroll_container {
        top: 60px;
        position: relative;
    }

    .profile-background-overlay {
        display: flex;
        align-items: center;
        justify-content: center;
        top: -120px;
        position: relative;
        width: 79%;
    }

    .profile-background {
        width: 94%;
        right: -40px;
    }

    .about {
        margin-top: 14px;
        height: 102vh !important;
    }

    .introduction {
        top: -80px !important;
    }

    .profile-img {
        top: -12px !important;
        width: 75% !important;
    }

    .floating-skill-icons {
        top: -160%;
    }

    .border-bottom-line::after {
        top: -600px !important;
    }
}

@media (max-width: 1024px) and (max-height: 600px) {

    .icon-1,
    .icon-2,
    .icon-3,
    .icon-4,
    .icon-5,
    .icon-6,
    .icon-7 {
        width: 42px;
        height: 42px;
    }

    .about {
        margin-top: 50px;
        height: 115vh !important;
    }

    .floating-skill-icons {
        top: 50% !important;
    }

    .icon_plus_scroll_container {
        padding-right: 58px;
        top: -215px !important;
        position: relative;
    }

    .profile-img {
        top: 1px !important;
        width: 46% !important;
    }

    .introduction {
        bottom: 63px !important;
        left: 200px !important;
    }

    .border-bottom-line::after {
        top: -515px !important;
        z-index: 1000 !important;
    }

    .profile-background {
        width: 81%;
        left: -21px;
        top: -20px;
    }
}


@media (max-width: 960px) {

    .portfolio-buttons,
    .portfolio-description,
    .portfolio-card-content {
        text-align: center;
        margin-left: auto;
        margin-right: auto;
        padding: 0;
        align-items: center;
    }

    .portfolio-card-join,
    .portfolio-card-pokedex,
    .portfolio-card-el_pollo_loco {
        grid-template-columns: 1fr;
        gap: 40px;
        padding: 10px;
    }

    .notebook-frame {
        max-width: 480px;
        margin: 0 auto;
    }

    .portfolio-project-title {
        font-size: 38px;
    }

    .floating-skill-icons {
        left: 68%;
        top: 20%;
    }
}


@media (max-width: 900px) {
    .mail-to {
        display: none;
    }

    .floating-skill-icons {
        left: 73%;
        top: 0;
    }

    .border-bottom-line::after {
        top: -419px !important;
    }

    .introduction {
        bottom: -42px;
    }

    .icon-1 {
        --dx: -120px;
        --dy: -180px;
    }

    .icon-2 {
        --dx: -60px;
        --dy: -220px;
    }

    .icon-3 {
        --dx: -10px;
        --dy: -180px;
    }

    .icon-4 {
        --dx: 50px;
        --dy: -240px;
    }

    .icon-5 {
        --dx: 120px;
        --dy: -160px;
    }

    .icon-6 {
        --dx: 160px;
        --dy: -220px;
    }

    .icon-7 {
        --dx: 210px;
        --dy: -170px;
    }

    .floating-icon {
        width: 42px;
        height: 42px;
    }

    .lets-talk-button {
        margin-top: 12px;
        height: 50px;
    }

    .icon_plus_scroll_container {
        height: auto;
        position: relative;
        top: 105px;
    }

    .about-me-decorative {
        width: 200px;
        height: 230px;
    }
}

@media (min-width: 960px) {

    .portfolio-card-pokedex {
        flex-direction: row-reverse;
        display: flex;
    }
}

